<?xml version="1.0"?>
<package format="2">
  <name>sm_calendar_week</name>
  <version>0.9.1</version>
  <description>The sm_calendar_week package</description>

  
  <maintainer email="pablo@ibrobotics.com">Pablo Iñigo Blasco</maintainer>


  
  <license>BSD-3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>smacc</depend>
  <depend>multirole_sensor_client</depend>
  <depend>sr_all_events_go</depend>  
  <depend>std_msgs</depend>

  <depend>ros_timer_client</depend>
  <depend>ros_publisher_client</depend>
  <depend>keyboard_client</depend>
  <depend>xterm</depend>
 

  <test_depend>rostest</test_depend>
  

  
  <export>
    

  </export>
</package>
